Fix checkbox alignment for FF

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -55,7 +55,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .center {
-  text-align: center;
+    text-align: center;
+}
+
+.left {
+    text-align: left;
 }
 
 .no-margin {
